<resources>
    <string name="app_name">LT3D</string>
    <string name="title_library">Library</string>
    <string name="title_scan">Scan</string>
    <string name="title_setting">Setting</string>
    <string name="login_in_to_lt3d">Sign in to LT3D</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="new_to_lt3d">New to LT3D?</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="signup">sign up</string>
    <string name="sign_up_to_lt3d">Sign up to LT3D</string>
    <string name="confirm_password">Confirm password</string>
    <string name="library_search"> Enter the book name</string>
    <string name="disconnect">Disconnect</string>
    <string name="logoImageDescription">logo</string>
    <string name="personImageDescription">person</string>
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="add_book">add_book</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
</resources>
