<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_book"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_sortAZ"
        android:icon="@drawable/ic_sort_by_alpha_white_24dp"
        android:title="@string/a_to_z"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sortZA"
        android:icon="@drawable/ic_sort_by_alpha_white_24dp"
        android:title="@string/z_to_a"
        android:visible="true"
        app:showAsAction="never" />



</menu>